<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.ogalandlord.ogalandlord.Register">



    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:background="@drawable/fast"
        android:layout_gravity="center"/>


    <TextView
        android:id="@+id/tvregisteration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="30dp"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/etusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginRight="30dp"
        android:inputType="text"/>


    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginRight="30dp"
        android:inputType="text"/>


    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginRight="30dp"
        android:inputType="text"/>


    <EditText
        android:id="@+id/etconfirm_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_pass"
        android:layout_marginRight="30dp"
        android:inputType="text"/>


    <Button
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>

</LinearLayout>
